<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PutASticker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SaveButton">Save it</string>
    <string name="close_desc">Close sticker</string>
    <string name="title_activity_save_stick">SaveStickActivity</string>
    <string name="title_activity_sticker_list">StickerListActivity</string>
    <string name="new_sticker_text">Tap to put a sticker</string>
    <string name="DecideButton">Decide now</string>
    <string name="title_activity_sticker_decide_activity">StickerDecideActivity</string>
    <string name="facebook">facebook</string>
    <string name="mail">mail</string>
    <string name="trash">trash</string>
    <string name="title_activity_congratulation">CongratulationActivity</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="decision">You have made a decision!</string>
    <string name="passed">and passed further your super idea:</string>
    <string name="back">Go back to sticker</string>
    <string name="push_message">Hello!\n Your super sticker:\n %s \n is going to peel of</string>
	<string name="push_button">Take an action</string>
	<string name="title_activity_push">Take an action</string>
</resources>
