<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CongratulationActivity" >

    <LinearLayout
            android:background="@color/NoteBackround"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical|center"
                android:text="@string/congratulations"
                android:textAlignment="inherit"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical|center"
                android:text="@string/decision"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical|left"
                android:text="@string/passed"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/stickerSubject"
                android:layout_width="fill_parent"
                android:layout_height="0pt"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:text="@string/new_sticker_text" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_gravity="bottom|center"
                android:onClick="closeMessage" />
        </LinearLayout>

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/close_desc"
        android:onClick="closeMessage"
        android:src="@drawable/ic_close" />

</RelativeLayout>