<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StickerDecideActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/NoteBackround"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stickerDecideSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal|center"
            android:background="@color/TextBackground"
            android:text="@string/new_sticker_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/facebook"
                android:onClick="facebookShare"
                android:src="@drawable/facebook" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/mail"
                android:onClick="messageShare"
                android:src="@drawable/mail" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/trash"
            android:onClick="deleteMessage"
            android:src="@drawable/trash" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/close_desc"
        android:onClick="closeSticker"
        android:src="@drawable/ic_close" />

</RelativeLayout>